# emacs

./: .gitignore  Makefile  README.md  README.org  config.org  hydras.org  init.el  init.org  mohkale.new.org  mohkale.org
.github/workflows/: build.yml
etc/: abbrev.el  custom.el  hosts  snippets.org  tempel-snippets.org
etc/ada/: ada.org  ada105.txt  ada150.txt  ada50.txt  ada55.txt  ada70.txt
etc/banners/: anime-girl-stare.txt  big.txt  bruh.txt  cat-anime-girl.txt  chika.txt  chunky.txt  cricket.txt  hydra.txt  kuro-usagi.txt  loli-smile.txt  pikachu.txt  pun0ko  rectangles.txt  small.txt  smisome1.txt  standard.txt  surprised-pikachu.txt  wink.txt
etc/eshell/: eshrc
etc/ispell/: spellings.txt
etc/licenses/: .profile
etc/project-skeletons/c-cmake/: CMakeLists.txt
etc/project-skeletons/c-make/: Makefile  __DOT__gitignore  compile_flags.txt
etc/project-skeletons/golang/: __DOT__gitignore
etc/project-skeletons/java-gradle/: gradle.properties
etc/signatures/: mohkale@kisara.moe  mohkalex@gmail.com
etc/skeletor/: haskell-stack.el  python-scrapy.el  rust-cargo.el
etc/skeletor/c-cmake/: .skeletor.el  __DOT__gitignore
etc/skeletor/c-cmake/src/: CMakeLists.txt  __MAIN__.cc
etc/skeletor/c-make/: .skeletor.el  Makefile
etc/skeletor/golang/: .skeletor.el  Makefile
etc/skeletor/java-gradle/: .skeletor.el  build.gradle.kts
etc/skeletor/java-make/: .skeletor.el  Makefile  __DOT__gitignore
etc/skeletor/python-poetry/: .skeletor.el
etc/snippets/org-mode/: elisp  exampleblock  python  src
etc/snippets/python-mode/: .yas-setup.el  debug
etc/tangle/: skip.txt
etc/tempel/: templates
etc/transient/: levels.el
split/: .gitignore  init-original.org  init.org  skip.txt
themes/: an-old-hope-theme.el
(+12 files in other folders)
